# TwiANBot

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: linked_media.json  posted_scrutins.json
src/: TwiBot.py  __init__.py  __main__.py
src/components/: __init__.py  client.py  mocked_twitter.py  req.py  task.py
src/models/: __init__.py  depute.py  scrutin_analyse.py  scrutins.py
src/tasks/: post.py  scrutins.py  tweets.py
src/utils/: req.py  task.py
